After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 662104 - SSL Handshake fails on certain sites
SSL Handshake fails on certain sites
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: Misc
2.36.x
Other Linux
: Normal major
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
: 666999 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-10-18 15:14 UTC by scottandchrystie
Modified: 2011-12-30 14:17 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description scottandchrystie 2011-10-18 15:14:21 UTC
When trying to open certain websites (https://alphashirt.com is one), there is an SSL handshake failure and the site will not load. Tested in two different webkit browsers (dwb and luakit) on Archlinux with libsoup 2.36.0. Downgrading libsoup to 2.34.3 fixes the issue.

Thanks,
Scott
Comment 1 Dan Winship 2011-10-18 17:54:18 UTC
fixed in glib-networking master. Unfortunately, this just missed the
GNOME 3.2.1 release
Comment 2 Dan Winship 2011-12-30 14:17:21 UTC
*** Bug 666999 has been marked as a duplicate of this bug. ***