gnutls: Add another G_TLS_ERROR_NOT_TLS case

If we get a GNUTLS_E_DECRYPTION_FAILED during the handshake, assume
the peer is just dumb, and return G_TLS_ERROR_NOT_TLS so, eg, libsoup
can fall back to SSLv3.

https://bugzilla.gnome.org/show_bug.cgi?id=662104